--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 
     <div class="profile-container">
         <div class="profile-header">
-            <img src="profile-picture.jpg" alt="Profile Picture">
-            <h1>John Doe</h1>
+            <img src="https://e7.pngegg.com/pngimages/615/615/png-clipart-cartoon-elephant-drawing-elephants-cartoon-mammal-poster.png" alt="Profile Picture">
+            <h1>Yodsakrit</h1>
             <p>Software Developer at XYZ Company</p>
         </div>
         <div class="profile-details">
             <h2>About Me</h2>
-            <p>Hello! I'm John, a passionate software developer with over 5 years of experience in web development. I love creating beautiful and functional websites.</p>
+            <p>Hello! I'm chang, a passionate software developer with over 5 years of experience in web development. I love creating beautiful and functional websites.</p>
             
             <h2>Skills</h2>
             <p>JavaScript, React, Node.js, HTML, CSS, Git</p>
             
             <h2>Contact</h2>
-            <p>Email: johndoe@example.com</p>
+            <p>Email: Yodsakrit@example.com</p>
             <p>Phone: (123) 456-7890</p>
         </div>
     </div>
